fix: increase z-index on dropdown menu

--- a/src/components/blocks/dropdown/_dropdown.scss
+++ b/src/components/blocks/dropdown/_dropdown.scss
@@ -61,7 +61,7 @@
     display: none;
     position: absolute;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
   }
   &__option {
     height: 30px;
