--- a/src/components/layout/landing/_landing.scss
+++ b/src/components/layout/landing/_landing.scss
@@ -11,7 +11,7 @@
     url('Assets/images/background/background-main.jpg'),
     url('Assets/images/background/background1.jpg'),
     url('Assets/images/background/background_green.jpg');
-  background-position: 50% 68%;
+  background-position: -47px -131px;
   background-repeat: no-repeat;
   padding-left: 140px;
   padding-top: 70px;
@@ -32,42 +32,42 @@
 @keyframes background-switch {
   0% {
     background-image: url('Assets/images/background/background-main.jpg');
-    background-position: 50% 68%;
+    background-position: -47px -131px;
   }
   10% {
     background-image: url('Assets/images/background/background-main.jpg');
-    background-position: 50% 68%;
+    background-position: -47px -131px;
   }
   25% {
     background-image: url('Assets/images/background/background-main.jpg');
-    background-position: 50% 68%;
+    background-position: -47px -131px;
   }
   33% {
     background-image: url('Assets/images/background/background1.jpg');
-    background-position: 100% 68%;
+    background-position: -543px -199px;
   }
   45% {
     background-image: url('Assets/images/background/background1.jpg');
-    background-position: 100% 68%;
+    background-position: -543px -199px;
   }
   58% {
     background-image: url('Assets/images/background/background1.jpg');
-    background-position: 100% 68%;
+    background-position: -543px -199px;
   }
   66% {
     background-image: url('Assets/images/background/background_green.jpg');
-    background-position: 100% 0%;
+    background-position: -160px -0px;
   }
   85% {
     background-image: url('Assets/images/background/background_green.jpg');
-    background-position: 100% 0%;
+    background-position: -160px -0px;
   }
   92% {
     background-image: url('Assets/images/background/background_green.jpg');
-    background-position: 100% 0%;
+    background-position: -160px -0px;
   }
   100% {
     background-image: url('Assets/images/background/background-main.jpg');
-    background-position: 100% 0%;
+    background-position: -47px -131px;
   }
 }
