--- a/src/pages/login/_login.scss
+++ b/src/pages/login/_login.scss
@@ -40,11 +40,11 @@
   background-repeat: no-repeat;
   padding: 20px;
   position: relative;
-  // animation-name: background-switch;
-  // animation-duration: 30s;
-  // animation-iteration-count: infinite;
-  // animation-timing-function: linear;
-  // animation-fill-mode: forwards;
+  animation-name: background-switch;
+  animation-duration: 30s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
   .enter-form {
     margin-top: 152px;
     margin-bottom: 152px;
@@ -59,17 +59,22 @@
 @keyframes background-switch {
   0% {
     background-image: url('Assets/images/background/background-login.jpg');
+    background-position: -44px -236px;
   }
   25% {
     background-image: url('Assets/images/background/background-login.jpg');
+    background-position: -44px -236px;
   }
   50% {
     background-image: url('Assets/images/background/background-main.jpg');
+    background-position: -47px -188px;
   }
   75% {
     background-image: url('Assets/images/background/background-main.jpg');
+    background-position: -47px -188px;
   }
   100% {
     background-image: url('Assets/images/background/background-login.jpg');
+    background-position: -44px -236px;
   }
 }
